--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
   h1{
     color:white;
     background-color: black;
+    text-align: center;
   }
-  background{
-    color:lightgrey;
+  section{
+    background-color:lightgrey;
+    
   }
+  div.absolute {
+  position: absolute;
+  bottom: 330px;
+  left:25px;
+}
+.textwrap{
+  float: left;
+  margin:1px;
+}
+
 </style>
 
 <body>
@@ -30,10 +42,21 @@
   <main class="container">
     <section id="main-bio">
       <section id="figure">
+        <div class="absolute">
         <h2 id="bio-name">Your Name</h2>
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+        </div>
+
+        <img id="bio-image"class="textwrap" src="https://placehold.it/200x200" alt="Your Name">
       </section>
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+        It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+         Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of 
+         the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the 
+         cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes 
+         from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil)
+          by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. 
+        The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+         </p>
     </section>
 
     <aside id="contact-info">
