working on contact info section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   #contact-info{
     float: left;
     width: 30pc;
-    line-height:15;
+    line-height: 15px;
   }
   #bio-image{
     float:left;
@@ -56,7 +56,7 @@
   a:link{
     color:#d21034;
   }
-  #figure.relative{
+  div.relative{
   position: relative;
   width: 400px;
   height: 200px;;
@@ -85,25 +85,32 @@ div.absolute{
         </div>
         <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name" style="vertical-align:text-top;margin:10px 50px">
       </section>
-      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-         Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
-         Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
-         Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. 
-         Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
-         (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics,
-          very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", 
-          comes from a line in section 1.10.32.
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut scelerisque ante, et eleifend velit. Integer in elementum ante.
+          Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus quis vehicula nisi. Suspendisse eget sagittis leo, 
+          imperdiet condimentum enim. Curabitur sed nisi et velit euismod fermentum vitae sit amet leo. Donec non justo nisi.
 
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33
-         from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions
-          from the 1914 translation by H. Rackham.<a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+        Donec a ultrices lorem. Phasellus a feugiat nibh. In porttitor dui quis lectus condimentum iaculis. Quisque finibus, nulla at fringilla
+         vestibulum, erat purus condimentum sem, nec condimentum neque magna in felis. Ut vestibulum vitae turpis at hendrerit. Ut suscipit 
+         egestas dui at sollicitudin. Phasellus at ultricies ex, id tincidunt metus. Sed orci elit, egestas nec odio ut, lacinia luctus ante.
+        
+        Morbi sed dapibus lacus. Nunc finibus tincidunt neque, ut euismod nisi dignissim ac. Pellentesque vel magna lobortis velit eleifend
+         malesuada. Curabitur efficitur, leo porttitor condimentum porta, orci eros semper mi, ut tempus mauris nibh eu arcu. Curabitur mattis 
+         magna ut nibh porttitor interdum. Nunc eu diam elementum felis ultrices vestibulum. Ut tincidunt consequat mi, quis dapibus ipsum 
+         elementum quis. Proin eleifend turpis id interdum finibus. Fusce aliquam massa ante, sit amet vestibulum sem euismod nec.
+        
+        Morbi at augue condimentum, mollis mi id, commodo neque. Duis venenatis neque in vulputate viverra. Maecenas vel mollis metus.
+         Fusce rhoncus eu dui in elementum. Maecenas id dui aliquam, consequat diam consectetur, scelerisque enim. Aliquam mattis elit 
+         scelerisque, elementum ligula a, porta sapien. Phasellus lobortis, mi ullamcorper euismod malesuada, risus mauris efficitur purus,
+          nec venenatis nisl magna eu eros. Vestibulum iaculis porttitor velit in euismod. Mauris luctus lacinia feugiat. Nunc lobortis elit
+           dui, ut egestas magna commodo et. Suspendisse vitae nisi velit. Duis quis tortor lobortis, elementum mauris nec, viverra orci.
+           <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
     </section>
 
     <aside id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Email:</strong> <a href="#">clemiyarjah@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">clemiblac</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
     </aside>
