--- a/index.html
+++ b/index.html
@@ -16,33 +16,43 @@
    background-color: #efeee7;
    font-style: Georgia;
    color:#333333;
-   margin-right: 0px;
-   margin-left: 0px;
-   margin-top: 0px;
-   margin-bottom: 0px;
-   padding-left: 0px;
-   padding-right: 0px;
-   padding-top: 0px;
-   padding-bottom: 0px;
+   margin-right:0px;
+   margin-left:0px;
+   margin-top:0px;
+   margin-bottom:0px;
+   padding-left:0px;
+   padding-right:0px;
+   padding-top:0px;
+   padding-bottom:0px;
 
+ }
+ header{
+   background-color:#333333;
  }
   h1{
     text-align: center;
     background-color: black;
     color:#eee;
     font-size: 28px;
+    padding-top:10px;
+    padding-bottom: 10px;
+   
   }
+
   h2{
     font-size: 24px;
-
   }
-  div.container{
+
+  #container{
     margin: 0 auto;
+    width: 1024px;
   }
 
   #main-bio{
     float: left;
     width:70pc;
+    margin-left:100px;
+    margin-right: 300px; 
   }
   #contact-info{
     float: left;
@@ -52,6 +62,12 @@
   #bio-image{
     float:left;
     widows: 300px;
+    width: 200px;
+    vertical-align:text-top;
+    margin-bottom:10px;
+    margin-left:10px;
+    margin-right:10px;
+
   }
   a:link{
     color:#d21034;
@@ -59,16 +75,20 @@
   div.relative{
   position: relative;
   width: 400px;
-  height: 200px;;
+  height: 20px;
+  bottom:550px;
+  left:1000px;
+  
 }
 div.absolute{
 
   position: absolute;
-  top: 230px;
-  left: 95px;
+  top: 250px;
+  left: 120px;
   width: 200px;
   height: 100px;
 }
+
 
 </style>
 <body>
@@ -79,41 +99,42 @@ div.absolute{
 
   <main class="container">
     <section id="main-bio">
-      <section id="figure" id="contact-info">
-      <div class="absolute">
+      <section id="contact-info">
+        <div class="absolute">
         <h2 id="bio-name">Your Name</h2>
         </div>
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name" style="vertical-align:text-top;margin:10px 50px">
-      </section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut scelerisque ante, et eleifend velit. Integer in elementum ante.
-          Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus quis vehicula nisi. Suspendisse eget sagittis leo, 
-          imperdiet condimentum enim. Curabitur sed nisi et velit euismod fermentum vitae sit amet leo. Donec non justo nisi.
+        <img id="bio-image" src="https://placehold.it/200x200"  alt="Your Name" /> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut scelerisque ante, et eleifend velit. Integer in elementum ante.
+        Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus quis vehicula nisi. Suspendisse eget sagittis leo, 
+        imperdiet condimentum enim. Curabitur sed nisi et velit euismod fermentum vitae sit amet leo. Donec non justo nisi.
 
         Donec a ultrices lorem. Phasellus a feugiat nibh. In porttitor dui quis lectus condimentum iaculis. Quisque finibus, nulla at fringilla
-         vestibulum, erat purus condimentum sem, nec condimentum neque magna in felis. Ut vestibulum vitae turpis at hendrerit. Ut suscipit 
-         egestas dui at sollicitudin. Phasellus at ultricies ex, id tincidunt metus. Sed orci elit, egestas nec odio ut, lacinia luctus ante.
+        vestibulum, erat purus condimentum sem, nec condimentum neque magna in felis. Ut vestibulum vitae turpis at hendrerit. Ut suscipit 
+        egestas dui at sollicitudin. Phasellus at ultricies ex, id tincidunt metus. Sed orci elit, egestas nec odio ut, lacinia luctus ante.
         
         Morbi sed dapibus lacus. Nunc finibus tincidunt neque, ut euismod nisi dignissim ac. Pellentesque vel magna lobortis velit eleifend
-         malesuada. Curabitur efficitur, leo porttitor condimentum porta, orci eros semper mi, ut tempus mauris nibh eu arcu. Curabitur mattis 
-         magna ut nibh porttitor interdum. Nunc eu diam elementum felis ultrices vestibulum. Ut tincidunt consequat mi, quis dapibus ipsum 
-         elementum quis. Proin eleifend turpis id interdum finibus. Fusce aliquam massa ante, sit amet vestibulum sem euismod nec.
+        malesuada. Curabitur efficitur, leo porttitor condimentum porta, orci eros semper mi, ut tempus mauris nibh eu arcu. Curabitur mattis 
+        magna ut nibh porttitor interdum. Nunc eu diam elementum felis ultrices vestibulum. Ut tincidunt consequat mi, quis dapibus ipsum 
+        elementum quis. Proin eleifend turpis id interdum finibus. Fusce aliquam massa ante, sit amet vestibulum sem euismod nec.
         
         Morbi at augue condimentum, mollis mi id, commodo neque. Duis venenatis neque in vulputate viverra. Maecenas vel mollis metus.
-         Fusce rhoncus eu dui in elementum. Maecenas id dui aliquam, consequat diam consectetur, scelerisque enim. Aliquam mattis elit 
-         scelerisque, elementum ligula a, porta sapien. Phasellus lobortis, mi ullamcorper euismod malesuada, risus mauris efficitur purus,
-          nec venenatis nisl magna eu eros. Vestibulum iaculis porttitor velit in euismod. Mauris luctus lacinia feugiat. Nunc lobortis elit
-           dui, ut egestas magna commodo et. Suspendisse vitae nisi velit. Duis quis tortor lobortis, elementum mauris nec, viverra orci.
-           <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+        Fusce rhoncus eu dui in elementum. Maecenas id dui aliquam, consequat diam consectetur, scelerisque enim. Aliquam mattis elit 
+        scelerisque, elementum ligula a, porta sapien. Phasellus lobortis, mi ullamcorper euismod malesuada, risus mauris efficitur purus,
+        nec venenatis nisl magna eu eros. Vestibulum iaculis porttitor velit in euismod. Mauris luctus lacinia feugiat. Nunc lobortis elit
+        dui, ut egestas magna commodo et. Suspendisse vitae nisi velit. Duis quis tortor lobortis, elementum mauris nec, viverra orci.
+        <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+      </section>
     </section>
 
-    <aside id="contact-info">
-      <h2>Contact Info</h2>
-      <ul>
-        <li><strong>Email:</strong> <a href="#">clemiyarjah@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">clemiblac</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-      </ul>
-    </aside>
+    <div class="relative">
+      <aside id="contact-info">
+        <h2>Contact Info</h2>
+        <ul>
+          <li><strong>Email:</strong> <a href="#">clemiyarjah@gmail.com</a></li>
+          <li><strong>Github:</strong> <a href="#">clemiblac</a></li>
+          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        </ul>
+      </aside>
+    </div>
   </main>
 
 </body>
