--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
   }
   #contact-info{
     float: left;
-    width: 30pc;
+    widows: 300px;
     line-height: 15px;
+    width:250px ;
+    height:300px;
+    text-align: left;
   }
   #bio-image{
     float:left;
-    widows: 300px;
+    margin:10px;
+    height:200px;
     width: 200px;
-    vertical-align:text-top;
-    margin-bottom:10px;
-    margin-left:10px;
-    margin-right:10px;
-
   }
+
+  #
   a:link{
     color:#d21034;
   }
@@ -76,8 +77,9 @@
   position: relative;
   width: 400px;
   height: 20px;
-  bottom:550px;
-  left:1000px;
+  bottom:300px;
+  left:1250px;
+
   
 }
 div.absolute{
@@ -101,9 +103,11 @@ div.absolute{
     <section id="main-bio">
       <section id="contact-info">
         <div class="absolute">
-        <h2 id="bio-name">Your Name</h2>
+        <h2 id="bio-name">Clementine Sraha</h2>
         </div>
-        <img id="bio-image" src="https://placehold.it/200x200"  alt="Your Name" /> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut scelerisque ante, et eleifend velit. Integer in elementum ante.
+        <img id="bio-image" src="C:\Users\clemi\Pictures\headshot.jpg"  alt="Clementine Sraha" /> 
+      </section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut scelerisque ante, et eleifend velit. Integer in elementum ante.
         Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus quis vehicula nisi. Suspendisse eget sagittis leo, 
         imperdiet condimentum enim. Curabitur sed nisi et velit euismod fermentum vitae sit amet leo. Donec non justo nisi.
 
@@ -122,7 +126,7 @@ div.absolute{
         nec venenatis nisl magna eu eros. Vestibulum iaculis porttitor velit in euismod. Mauris luctus lacinia feugiat. Nunc lobortis elit
         dui, ut egestas magna commodo et. Suspendisse vitae nisi velit. Duis quis tortor lobortis, elementum mauris nec, viverra orci.
         <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
-      </section>
+     
     </section>
 
     <div class="relative">
