--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
    padding-right:0px;
    padding-top:0px;
    padding-bottom:0px;
+   text-align: left;
 
  }
  header{
@@ -51,46 +52,50 @@
   #main-bio{
     float: left;
     width:70pc;
-    margin-left:100px;
-    margin-right: 300px; 
+    margin-left:25px;
   }
   #contact-info{
     float: left;
     widows: 300px;
-    line-height: 15px;
-    width:250px ;
-    height:300px;
-    text-align: left;
+    line-height:15px;
+    width:250px;
+    height:220px;
+    text-align:left;
+    font-size: 14px;
+
   }
   #bio-image{
     float:left;
     margin:10px;
+    margin-bottom:0px;
     height:200px;
-    width: 200px;
+    width:200px;
   }
 
-  #
   a:link{
     color:#d21034;
   }
+
   div.relative{
   position: relative;
   width: 400px;
   height: 20px;
   bottom:300px;
-  left:1250px;
+  left:1150px;
 
-  
-}
-div.absolute{
+  }
+ div.absolute{
 
   position: absolute;
   top: 250px;
-  left: 120px;
+  left: 50px;
   width: 200px;
   height: 100px;
-}
-
+ }
+ p{
+  text-align: justify; 
+  font-size: 16px; 
+ }
 
 </style>
 <body>
