--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="absolute">
         <h2 id="bio-name">Clementine Sraha</h2>
         </div>
-        <img id="bio-image" src="C:\Users\clemi\Desktop\clemiblac.github.io\headshot compressed.jpg"  alt="Clementine Sraha" /> 
+        <img id="bio-image" src="headshot_compressed.jpg"  alt="Clementine Sraha" /> 
       </section>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut scelerisque ante, et eleifend velit. Integer in elementum ante.
         Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus quis vehicula nisi. Suspendisse eget sagittis leo, 
